adding workingon scanner filer